--- a/index.css
+++ b/index.css
@@ -24,6 +24,9 @@ body {
 .nav-container {
   height: 6rem;
   display: flex;
+  position: fixed;
+  width: 100%;
+  z-index: 1;
   align-items: center;
   justify-content: space-evenly;
   background-color: black;
@@ -119,6 +122,7 @@ body {
   height: auto;
   display: grid;
   grid-template-columns: repeat(2, 50%);
+  padding-top: 6rem;
 }
 
 .hero-content {
@@ -179,15 +183,20 @@ body {
 }
 
 .counts-container {
-  height: auto;
   width: 100%;
   overflow: hidden;
   white-space: nowrap;
+  padding: 5rem 0;
+  box-sizing: border-box;
+  animation: marquee 5s linear infinite;
+}
+
+.counts {
   display: flex;
   align-items: center;
   justify-content: space-around;
-  padding: 5rem 0;
 }
+
 
 .counts-container p {
   font-family: poppins;
@@ -292,7 +301,7 @@ body {
 
 .speaker img {
   border-radius: 100%;
-  width: 3rem;
+  width: 4.5rem;
 }
 
 .speaker-text h4 {
@@ -301,4 +310,56 @@ body {
 
 .speaker-text p {
   font-size: 14px;
+}
+
+/* Footer */
+
+.footer-container {
+  background-color: black;
+  height: 4rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 1rem;
+}
+
+.footer-logo {
+  display: flex;
+}
+
+.footer-logo img {
+  margin-right: 8px;
+  width: 1.3rem;
+}
+
+.footer-logo h1 {
+  font-family: "Nunito Sans", sans-serif;
+  font-size: 1.5rem;
+  color: white;
+}
+
+.footer-logo span {
+  color: #5de1e6;
+  font-size: 1.5rem;
+}
+
+.copyRights {
+  color: white;
+  font-family: poppins;
+}
+
+.copyRights a {
+  color: #5de1e6;
+  font-family: poppins;
+}
+
+.contact-links-container {
+  display: flex;
+  align-items: center;
+  gap: 1.5rem;
+}
+
+.contact-links-container p {
+  color: white;
+  font-family: poppins;
 }
